--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"vercel-build": "vite build",
+		"vercel-serve": "npx serve -s dist",
+		"netlify-build": "vite build"
 	},
 	"dependencies": {
 		"@radix-ui/react-alert-dialog": "^1.0.5",
